# SimpleToolSuite

./: .gitignore  README.md  changelog.md  requirements.txt  setup.cfg
Available Plugins/: README.md
Available Plugins/IllegalCharacterReplacement/: IllegalCharacterReplacement.py  icrt_ui.ui  metadata.json  requirements.txt
Available Plugins/STS-PLUGIN-ICRT/: ICRT.py
Available Plugins/STS-PLUGIN-POMO/: POMO.py  config.json
Available Plugins/STS-PLUGIN-QRCG/: QRCG.ui  requirements.txt
Available Plugins/STS-PLUGIN-SMGA/: SMGA.py
Available Plugins/STS-PLUGIN-WIFT/: WIFT.py
Available Plugins/STS-PLUGIN-WIFT/WebPage/: index.html
Available Plugins/SimpleMusicGenreAnalyzer/: SimpleMusicGenreAnalyzer.py  metadata.json  smga_ui.ui
SimpleToolSuite/: PluginManager.py  SimpleToolSuite.py  dark_mode.css  light_mode.css  main.py  pyqt_simpletoolsuite_1.ui  pyqt_simpletoolsuite_2.ui
SimpleToolSuite/plugins/IllegalCharacterReplacement/: IllegalCharacterReplacement.py  (+1 more)
SimpleToolSuiteV1.0.1/: PluginManager.py  main.py
plugins/STS-PLUGIN-ICRT/: ICRT.py  ICRT.ui  metadata.json
plugins/STS-PLUGIN-POMO/: POMO.ui  metadata.json
plugins/STS-PLUGIN-QRCG/: QRCG.py  metadata.json  readme.md
plugins/STS-PLUGIN-SMGA/: SMGA.ui  metadata.json  requirements.txt
plugins/STS-PLUGIN-WIFT/: WIFT.py  WIFT.ui  metadata.json  requirements.txt
scripts/: build_appimage.sh  build_linux.sh  build_mac.sh
src/: portable.py
src/simpletoolsuite/: __main__.py  dark_mode.css  main.ui  org.simpletoolsuite.SimpleToolSuite.desktop  pluginmanager.py  simpletoolsuite.py  sts_logging.py
(+5 files in other folders)
