[metadata]
name = simpletoolsuite
version = 1.0.6
description = A modular system with a collection of simple yet useful tools. 
long_description = file: README.md
long_description_content_type = text/markdown
author = MaxTheSpy
author_email = MaxTheSpy@Gmail.com
url = https://github.com/MaxTheSpy/SimpleToolSuite
keywords = utility

[options]
package_dir=
    =src
python_requires = >= 3.12
packages = find:
install_requires = file:requirements.txt

[options.entry_points]
console_scripts =
    simpletoolsuite = simpletoolsuite.simpletoolsuite:main

[options.packages.find]
where=src

[options.package_data]
* = *.png, *.ui, *.desktop, *.css
